--- a/environment.yaml
+++ b/environment.yaml
@@ -3,7 +3,6 @@ channels:
 - main
 dependencies:
 - beautifulsoup4=4.11.1
-- black=22.8.0
 - click=8.1.3
 - codecov=2.1.11
 - dill=0.3.5.1
@@ -25,8 +24,7 @@ dependencies:
 - pytest-asyncio=0.19.0
 - pytest-cov=4.0.0
 - pytest=7.1.3
-- python=3.9
-- pyvirtualdisplay=3.0
+- python=3.9.2
 - recommonmark=0.7.1
 - redis-py=4.3.4
 - s3fs=2022.8.2
@@ -38,6 +36,8 @@ dependencies:
 - tblib=1.7.0
 - wget=1.20.3
 - pip:
+  - black==22.8.0
+  - pyvirtualdisplay==3.0
   - pycld3==0.22
   - dataclasses-json==0.5.7
   - domain-utils==0.7.1
