--- a/environment.yaml
+++ b/environment.yaml
@@ -35,6 +35,8 @@ dependencies:
 - tabulate=0.9.0
 - tblib=1.7.0
 - wget=1.20.3
+- tqdm=4.66.1
+- tranco=0.6
 - pip:
   - black==22.8.0
   - pyvirtualdisplay==3.0
