--- a/environment.yaml
+++ b/environment.yaml
@@ -36,8 +36,8 @@ dependencies:
 - tblib=1.7.0
 - wget=1.20.3
 - tqdm=4.66.1
-- tranco=0.6
 - pip:
+  - tranco==0.6
   - black==22.8.0
   - pyvirtualdisplay==3.0
   - pycld3==0.22
